--- a/index.ipynb
+++ b/index.ipynb
@@ -478,7 +478,7 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    for neighbor"
+    "    for i in neighbors"
    ]
   },
   {
