--- a/index.ipynb
+++ b/index.ipynb
@@ -478,7 +478,8 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    for i in neighbors"
+    "    for i in neighbors:\n",
+    "        "
    ]
   },
   {
