--- a/index.ipynb
+++ b/index.ipynb
@@ -479,7 +479,7 @@
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    for i in neighbors:\n",
-    "        i['distance'] = "
+    "        i['distance'] = distance(neighb, neighbor)"
    ]
   },
   {
