automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -479,7 +479,8 @@
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    for i in neighbors:\n",
-    "        i['distance'] = distance(neighb, neighbor)"
+    "        i['distance'] = distance(neighbors[0], neighbor)\n",
+    "        "
    ]
   },
   {
