automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -478,9 +478,10 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    \n",
+    "    newArr = [];\n",
     "    for i in neighbors:\n",
     "        i['distance'] = distance(neighbors[0], neighbor)\n",
+    "        \n",
     "        "
    ]
   },
