automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -481,7 +481,8 @@
     "    newArr = [];\n",
     "    for i in neighbors:\n",
     "        i['distance'] = distance(neighbors[0], neighbor)\n",
-    "        newArr\n",
+    "        newArr.append(i)\n",
+    "    \n",
     "        "
    ]
   },
