automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -482,7 +482,7 @@
     "    for i in neighbors:\n",
     "        i['distance'] = distance(neighbors[0], neighbor)\n",
     "        newArr.append(i)\n",
-    "    \n",
+    "    return \n",
     "        "
    ]
   },
