automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -471,10 +471,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
@@ -482,17 +480,31 @@
     "    for i in neighbors:\n",
     "        i['distance'] = distance(neighbors[0], neighbor)\n",
     "        newArr.append(i)\n",
-    "    return \n",
+    "    return newArr\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 4.123105625617661},\n",
+       " {'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.123105625617661},\n",
+       " {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 4.123105625617661},\n",
+       " {'name': 'Edgar', 'avenue': 6, 'street': 13, 'distance': 4.123105625617661},\n",
+       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 4.123105625617661},\n",
+       " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance_all(fred, neighbors)\n",
     "\n",
