--- a/index.ipynb
+++ b/index.ipynb
@@ -471,14 +471,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    newArr = [];\n",
     "    for i in neighbors:\n",
-    "        i['distance'] = distance(neighbors[0], neighbor)\n",
+    "        i['distance'] = distance(neighbors[0], i)\n",
     "        newArr.append(i)\n",
     "    return newArr\n",
     "        "
@@ -486,21 +486,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 4.123105625617661},\n",
-       " {'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.123105625617661},\n",
-       " {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 4.123105625617661},\n",
-       " {'name': 'Edgar', 'avenue': 6, 'street': 13, 'distance': 4.123105625617661},\n",
-       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 4.123105625617661},\n",
+       "[{'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 0.0},\n",
+       " {'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285},\n",
+       " {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0},\n",
+       " {'name': 'Edgar', 'avenue': 6, 'street': 13, 'distance': 5.385164807134504},\n",
+       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979},\n",
        " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
