automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -479,7 +479,7 @@
     "    newArr = [];\n",
     "    for i in neighbors:\n",
     "        i['distance'] = distance(neighbors[0], i)\n",
-    "        if i \n",
+    "        if i != neighbors[]\n",
     "        newArr.append(i)\n",
     "    return newArr\n",
     "        "
