--- a/index.ipynb
+++ b/index.ipynb
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,29 +479,28 @@
     "    newArr = [];\n",
     "    for i in neighbors:\n",
     "        i['distance'] = distance(neighbors[0], i)\n",
-    "        if i != neighbors[]\n",
-    "        newArr.append(i)\n",
+    "        if i != neighbors[0]:\n",
+    "            newArr.append(i)\n",
     "    return newArr\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 0.0},\n",
-       " {'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285},\n",
+       "[{'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285},\n",
        " {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0},\n",
        " {'name': 'Edgar', 'avenue': 6, 'street': 13, 'distance': 5.385164807134504},\n",
        " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979},\n",
        " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
