--- a/index.ipynb
+++ b/index.ipynb
@@ -532,7 +532,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    for i in neighbors:\n",
-    "        i[distance] = "
+    "        i['distance'] = "
    ]
   },
   {
