--- a/index.ipynb
+++ b/index.ipynb
@@ -531,8 +531,10 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
+    "    \n",
     "    for i in neighbors:\n",
-    "        i['distance'] = distance(first_neighb, i)"
+    "        i['distance'] = distance(first_neighbor, i)\n",
+    "        "
    ]
   },
   {
