automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -531,9 +531,10 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    \n",
+    "    newArr = []\n",
     "    for i in neighbors:\n",
     "        i['distance'] = distance(first_neighbor, i)\n",
+    "        newArr\n",
     "        "
    ]
   },
