automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -534,7 +534,8 @@
     "    newArr = []\n",
     "    for i in neighbors:\n",
     "        i['distance'] = distance(first_neighbor, i)\n",
-    "        newArr\n",
+    "        if(len)\n",
+    "        newArr.append()\n",
     "        "
    ]
   },
