--- a/index.ipynb
+++ b/index.ipynb
@@ -534,7 +534,7 @@
     "    newArr = []\n",
     "    for i in neighbors:\n",
     "        i['distance'] = distance(first_neighbor, i)\n",
-    "        if(len)\n",
+    "        if(len(newArr) > number)\n",
     "        newArr.append()\n",
     "        "
    ]
