automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -534,8 +534,9 @@
     "    newArr = []\n",
     "    for i in neighbors:\n",
     "        i['distance'] = distance(first_neighbor, i)\n",
-    "        if(len(newArr) > number)\n",
-    "        newArr.append()\n",
+    "        if(len(newArr) > number):\n",
+    "            newArr.append()\n",
+    "        \n",
     "        "
    ]
   },
