--- a/index.ipynb
+++ b/index.ipynb
@@ -535,7 +535,7 @@
     "    for i in neighbors:\n",
     "        i['distance'] = distance(first_neighbor, i)\n",
     "        if(len(newArr) > number):\n",
-    "            newArr.append()\n",
+    "            newArr.append(i)\n",
     "        \n",
     "        "
    ]
