automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -536,6 +536,7 @@
     "        i['distance'] = distance(first_neighbor, i)\n",
     "        if(len(newArr) > number):\n",
     "            newArr.append(i)\n",
+    "    return \n",
     "        \n",
     "        "
    ]
