--- a/index.ipynb
+++ b/index.ipynb
@@ -534,7 +534,7 @@
     "        i['distance'] = distance(first_neighbor, i)\n",
     "        if(len(newArr) < number):\n",
     "            newArr.append(i)\n",
-    "    return newArr\n",
+    "    return \n",
     "        \n",
     "        "
    ]
