automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
     "        i['distance'] = distance(first_neighbor, i)\n",
     "        if(len(newArr) < number):\n",
     "            newArr.append(i)\n",
-    "    newlist = sorted(newArr, key=lambda k: k['d'])\n",
+    "    newlist = sorted(newArr, key=lambda k: k['distance'])\n",
     "    return newlist\n",
     "        \n",
     "        "
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        " {'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285}]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
