automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -534,7 +534,7 @@
     "        i['distance'] = distance(first_neighbor, i)\n",
     "        if(len(newArr) < number):\n",
     "            newArr.append(i)\n",
-    "    newlist = sorted(newArr, key=lambda k: k['distance'])\n",
+    "    newlist = sorted(newArr, key=lambda k: k['distance'] reverse=True)\n",
     "    return newlist\n",
     "        \n",
     "        "
