--- a/index.ipynb
+++ b/index.ipynb
@@ -534,7 +534,7 @@
     "        i['distance'] = distance(first_neighbor, i)\n",
     "        if(len(newArr) < number):\n",
     "            newArr.append(i)\n",
-    "    newlist = sorted(newArr, key=lambda k: k['distance'], reverse=True)\n",
+    "    \n",
     "    return newlist\n",
     "        \n",
     "        "
@@ -542,9 +542,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285},\n",
+       " {'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 0.0}]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nearest_neighbors(fred, neighbors, 2)\n",
     "# [{'avenue': 5, 'distance': 1.0, 'name': 'Bob', 'street': 8},\n",
