--- a/index.ipynb
+++ b/index.ipynb
@@ -532,6 +532,7 @@
     "    newArr = []\n",
     "    for i in neighbors:\n",
     "        i['distance'] = distance(first_neighbor, i)\n",
+    "        newlist = sorted(newArr, key=lambda k: k['distance'], reverse=True)\n",
     "        if(len(newArr) < number):\n",
     "            newArr.append(i)\n",
     "    \n",
