--- a/index.ipynb
+++ b/index.ipynb
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,21 +541,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Edgar', 'avenue': 6, 'street': 13, 'distance': 5.385164807134504},\n",
-       " {'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285},\n",
-       " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661},\n",
-       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979},\n",
-       " {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0},\n",
-       " {'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 0.0}]"
+       "{'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
