--- a/index.ipynb
+++ b/index.ipynb
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
     "    for i in neighbors:\n",
     "        i['distance'] = distance(first_neighbor, i)\n",
     "        newArr.append(i)\n",
-    "    newlist = sorted(newArr, key=lambda k: k['distance'], reverse=True)\n",
+    "    newlist = sorted(newArr, key=lambda k: k['distance'])\n",
     "    return newlist[number-1]\n",
     "        \n",
     "        "
@@ -541,16 +541,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285}"
+       "{'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
