--- a/index.ipynb
+++ b/index.ipynb
@@ -534,7 +534,7 @@
     "        i['distance'] = distance(first_neighbor, i)\n",
     "        newArr.append(i)\n",
     "    newlist = sorted(newArr, key=lambda k: k['distance'])\n",
-    "    return newlist[number]\n",
+    "    return newlist[0number]\n",
     "        \n",
     "        "
    ]
