automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,23 +534,24 @@
     "        i['distance'] = distance(first_neighbor, i)\n",
     "        newArr.append(i)\n",
     "    newlist = sorted(newArr, key=lambda k: k['distance'])\n",
-    "    return newlist[0number]\n",
+    "    return newlist[0:number]\n",
     "        \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979}"
+       "[{'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 0.0},\n",
+       " {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0}]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
