automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -532,7 +532,7 @@
     "    newArr = []\n",
     "    for i in neighbors:\n",
     "        i['distance'] = distance(first_neighbor, i)\n",
-    "        if new\n",
+    "        if i != firs\n",
     "            newArr.append(i)\n",
     "    newlist = sorted(newArr, key=lambda k: k['distance'])\n",
     "    return newlist[0:number]\n",
