automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
     "    newArr = []\n",
     "    for i in neighbors:\n",
     "        i['distance'] = distance(first_neighbor, i)\n",
-    "        if i != firs\n",
+    "        if i != first_neighbor:\n",
     "            newArr.append(i)\n",
     "    newlist = sorted(newArr, key=lambda k: k['distance'])\n",
     "    return newlist[0:number]\n",
@@ -542,17 +542,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 0.0},\n",
-       " {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0}]"
+       "[{'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0},\n",
+       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979}]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
